5.13
WPS timeouts changed
More traps handled. Auto restore managed mode on interface after SIGINT/SIGHUP

5.12
Fixed bug for wash scanning on reaver 1.5.3. Now new method works for all versions because the version doesn't care anymore

5.11
Custom PIN, bruteforce and Pixie Dust WPS attacks integrated in new parser system
Fixed bug for wash scanning on custom reaver 1.5.4 for Wifislax
Some code improvements

5.1
Integrated online PIN database for "known WPS PINs attack" (reaver and bully)
Zhao Chunsheng algorithm integrated (computepin)
Stefan Viehböck algorithm integrated (easybox)
Some language strings changed
Fixed bug showing selected charset for hashcat v3.0 on bruteforce offline decrypt attack

5.01
WPS bruteforce PIN attacks (reaver and bully)
New system for arm architecture detection
Compatibility extended to Parrot arm version on Raspberry Pi
Some WPS attacks improvements
Compatibility extended for hashcat v3.0 or higher

5.0
WPS attacks menu added
WPS scanning based on wash tool. Self-parametrization to avoid "Bad FCS" problem
WPS Custom PIN association
WPS Pixie Dust attacks integrated with reaver and bully
Some code improvements

4.32
Some code improvements and refactors. Warnings removed based on shellcheck tool
README.md small modifications
Fix on language menu selecting greek language
Fixed problem on renew_ifaces_and_macs_list function when there are interfaces without mac (like some tunnel interfaces)

4.31
Now optionally on Evil Twin captive portal attack you can choose between to have internet access or to use a "dns trick"
Fixed bug writing handshake files on some paths
Added possibility to get back to Evil Twin main menu from the internet interface selection menu

4.3
Evil Twin attack added: captive portal
Some language strings changed
Now initial forwarding state is restored on exit
Fix for Linux which change interface name to a very different name while getting back to managed from monitor mode

4.22